partial/force-app/main/default/objects/Group_Member__c/Group_Member__c.object-meta.xml
<CustomObject>
    <label>Group Member</label>
    <nameField>
        <displayFormat>GM#{000000}</displayFormat>
        <label>Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>