partial/force-app/main/default/objects/Group_Member__c/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <label>Public Group</label>
    <referenceTo>Public_Group__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>